@@ -9,6 +9,7 @@ November 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>
  * macosx/English.lproj/PCSX.nib/objects.nib: Likewise.
  * macosx/English.lproj/PCSX.nib/info.nib: Likewise.
  * macosx/English.lproj/PCSX.nib/classes.nib: Likewise.
+ * macosx/main.m: Reload plugins at each time emulation starts.
 
 November 3, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
